change contact info color

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <ul>
               <li> RBC account</li>
               <ul>
-                <li>Used Kibana to help optimize the back of the inhouse RBC performance review software</li>
+                <li>Used Kibana to help optimize the back-end of the inhouse RBC performance review software</li>
                 <li>Worked on the frontend for inhouse performance review software used by RBC executives and VPs.</li>
               </ul>
               <br>
@@ -172,6 +172,7 @@
         <a href="https://www.instagram.com/antoinekhourii/" target="_blank">Instagram</a>
         <a href="https://www.linkedin.com/in/antoine-khouri-19b858188/" target ="_blank">LinkedIn</a>
         <a href="https://www.facebook.com/tonikhouri97" target="_blank">Facebook</a>
+        <a>+1-514-699-6015</a>
       </div>
     </div>
   </footer>
