--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   </header>
 
   <main>
-    <!-- // Work Experience -->
+    <!-- Technical Skills-->
     <section id="skills" class="skills">
       <div class="content-wrap">
         <h2>Technical Skills</h2>
-        <div class="col-narrow">
+        <div class="col-narrow ">
           <h3>Programming Languages</h3>
       </div>
-      <div class="col-wide">
+      <div class="col-wide job-description">
         <ul>
           <li>Java</li>
           <li>C</li>
@@ -50,7 +50,7 @@
       <div class="col-narrow">
         <h3>IDEs</h3>
       </div>
-      <div class="col-wide">
+      <div class="col-wide job-description">
         <ul>
           <li>Visual Studio</li>
           <li>Xcode</li>
@@ -64,7 +64,7 @@
       <div class="col-narrow">
         <h3>Other</h3>
       </div>
-      <div class="col-wide">
+      <div class="col-wide job-description">
         <ul>
           <li>ElasticSearch</li>
           <li>Kibana</li>
@@ -75,6 +75,7 @@
       </div>
     </section>
     <section id="work" class="work">
+      <!-- // Work Experience -->
       <div class="content-wrap">
         <h2>Work Experience</h2>
 
