--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <p>Fluent in English, French & Arabic.</p>
         </div>
       </div>
+      <a id="download" href="resume.pdf" download>Download PDF</a>
   </header>
 
   <main>
@@ -150,7 +151,7 @@
 
           <!--School 1 details -->
           <h3>College International Marie De France</h3>
-          <p>French Baccalaureate In Sciences, with Mention "Bien"</p>
+          <p>French Baccalaureate In Science, with Mention "Bien"</p>
           <p id="job-address">4635 Queen Mary Road, Montreal QC</p>
           <p id="job-dates">September 2010-June 2015</p>
 
@@ -173,6 +174,7 @@
         <a href="https://www.instagram.com/antoinekhourii/" target="_blank">Instagram</a>
         <a href="https://www.linkedin.com/in/antoine-khouri-19b858188/" target ="_blank">LinkedIn</a>
         <a href="https://www.facebook.com/tonikhouri97" target="_blank">Facebook</a>
+        <a href="https://github.com/antoinekhouri" target="_blank">Github</a>
         <a>+1-514-699-6015</a>
       </div>
     </div>
