--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <li>Improved pre-existing sensor state machine</li>
                 <li>Implemented watchdog reset functionality</li>
               </ul>
+              <br>
             <li>Gateway</li>
               <ul>
                 <li>Implemented in Python</li>
@@ -177,6 +178,7 @@
         <a href="https://github.com/antoinekhouri" target="_blank">Github</a>
         <a>+1-514-699-6015</a>
       </div>
+      <p>Copyright 2019 by Antoine Khouri</p>
     </div>
   </footer>
 </body>
