add download button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           <p>Fluent in English, French & Arabic.</p>
         </div>
       </div>
-      <a id="download" href="resume.pdf" download>Download PDF</a>
+      <button id ="downloadButton"><a id="download" href="resume.pdf" download>Download PDF</a></button>
+      
   </header>
 
   <main>
