--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <li>Lejos EV3</li>
           <li>Comfortable Unix Environment</li>
           <li>Junit</li>
+          <li>STM32</li>
         </ul>
       </div>
     </section>
