Updated Sapient info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li>ElasticSearch</li>
           <li>Kibana</li>
           <li>Lejos EV3</li>
-          <li>Comfortable Unix Environment</li>
+          <li>Comfortable in Unix Environment</li>
           <li>Junit</li>
           <li>STM32</li>
         </ul>
@@ -129,18 +129,21 @@
             <p id ="job-dates">June 2019-August 2019</p>
           </div>
           <div class="col-wide job-description">
-            <p>Worked & consulted on various projects, mostly front-end development, for the RBC account. Also worked on an industry project.</p>
+            <p>Worked on the RBC account & on an industry project.</p>
             <p>Key Contributions:</p>
             <ul>
               <li> RBC account</li>
               <ul>
-                <li>Used Kibana to help optimize the back-end of the inhouse RBC performance review software</li>
-                <li>Worked on the frontend for inhouse performance review software used by RBC executives and VPs.</li>
+                <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube.</li>
+                <li>Collected & displayed that data on Kibana Canvases using CSS as well</li>
+                <li>Optimized the "time to fix a broken build" python script deployed on Jenkins</li>
               </ul>
               <br>
               <li>Industry Project</li>
               <ul>
                 <li>Field was Consumer Products</li>
+                <li>Used HTML, CSS & React to build a website</li>
+                <li>Website used to matched industry specialists looking to leverage social media in order to fuel their marketing campaign</li>
               </ul>
             </ul>
           </div>
@@ -158,7 +161,7 @@
           <p id="job-address">4635 Queen Mary Road, Montreal QC</p>
           <p id="job-dates">September 2010-June 2015</p>
 
-          <!--School 2 deatisl -->
+          <!--School 2 deatails -->
           <h3>McGill University</h3>
           <p>Bachelor in Engineering, Software engineering</p>
           <p id="job-address">845 Sherbrooke Street West, Montreal, QC</p>
