--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p>Fluent in English, French & Arabic.</p>
         </div>
       </div>
-      <button id ="downloadButton"><a id="download" href="resume.pdf" download>Download PDF</a></button>
+      <button id ="downloadButton"><a id="download" href="Antoine_khouri_Resume.pdf" download>Download PDF</a></button>
       
   </header>
 
