--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <li>Wired "Modbus" Project</li>
               <ul>
                 <li>Implemented in C</li>
-                <li>Improvement communication timing to gateway</li>
+                <li>Improved communication timing to gateway</li>
                 <li>Implemented alarm detection & notification to gateway</li>
                 <li>Improved pre-existing sensor state machine</li>
                 <li>Implemented watchdog reset functionality</li>
@@ -136,14 +136,16 @@
               <ul>
                 <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube.</li>
                 <li>Collected & displayed that data on Kibana Canvases using CSS as well</li>
-                <li>Optimized the "time to fix a broken build" python script deployed on Jenkins</li>
+                <li>Created multiple KPIs displayed internally on RBC screens</li>
+                <li>Optimized the "time to fix a broken build" python script deployed on Jenkins, collected the Data and displayed it for RBC executives</li>
+                <li>Wrote an excel parser in Java that parses the responses to a Tembosocial survey and pushes the Data to elastic. Automated the entire process using Maven & jenkins</li>
               </ul>
               <br>
               <li>Industry Project</li>
               <ul>
                 <li>Field was Consumer Products</li>
-                <li>Used HTML, CSS & React to build a website</li>
-                <li>Website used to matched industry specialists looking to leverage social media in order to fuel their marketing campaign</li>
+                <li>Used React to build the website website</li>
+                <li>Website used to match industry specialists looking to leverage social media in order to fuel their marketing campaign with social media promoters</li>
               </ul>
             </ul>
           </div>
