--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
             <p id ="job-dates">June 2019-August 2019</p>
           </div>
           <div class="col-wide job-description">
-            <p>Worked on the RBC account & on an industry project.</p>
+            <p>Worked on the a client account & on an industry project.</p>
             <p>Key Contributions:</p>
             <ul>
-              <li> RBC account</li>
+              <li>Account Work</li>
               <ul>
                 <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube.</li>
                 <li>Collected & displayed that data on Kibana Canvases using CSS as well</li>
                 <li>Created multiple KPIs displayed internally on RBC screens</li>
-                <li>Optimized the "time to fix a broken build" python script deployed on Jenkins, collected the Data and displayed it for RBC executives</li>
+                <li>Optimized the "time to fix a broken build" python script deployed on Jenkins, collected the Data and displayed it for account executives</li>
                 <li>Wrote an excel parser in Java that parses the responses to a Tembosocial survey and pushes the Data to elastic. Automated the entire process using Maven & jenkins</li>
               </ul>
               <br>
               <li>Industry Project</li>
               <ul>
                 <li>Field was Consumer Products</li>
-                <li>Used React to build the website website</li>
+                <li>Used React to build the website</li>
                 <li>Website used to match industry specialists looking to leverage social media in order to fuel their marketing campaign with social media promoters</li>
               </ul>
             </ul>
