remove client name

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <ul>
                 <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube.</li>
                 <li>Collected & displayed that data on Kibana Canvases using CSS as well</li>
-                <li>Created multiple KPIs displayed internally on RBC screens</li>
+                <li>Created multiple KPIs displayed internally on client's office's screens</li>
                 <li>Optimized the "time to fix a broken build" python script deployed on Jenkins, collected the Data and displayed it for account executives</li>
                 <li>Wrote an excel parser in Java that parses the responses to a Tembosocial survey and pushes the Data to elastic. Automated the entire process using Maven & jenkins</li>
               </ul>
