--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="col-wide job-description">
-          <p>Worked on the company's sensor backend code as well as the IoT device ("gateway") that collects all the data from the sensors.</p>
+          <p>Worked on the company's sensor backend code as well as the IoT device ("gateway") that collects all the data from the sensors</p>
           <p>Key contributions:</p>
           <ul>
             <li>Wireless Project</li>
@@ -134,7 +134,8 @@
             <ul>
               <li>Account Work</li>
               <ul>
-                <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube.</li>
+                <li>Client was a fortune 500 company</li>
+                <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube</li>
                 <li>Collected & displayed that data on Kibana Canvases using CSS as well</li>
                 <li>Created multiple KPIs displayed internally on client's office's screens</li>
                 <li>Optimized the "time to fix a broken build" python script deployed on Jenkins, collected the Data and displayed it for account executives</li>
