--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
                 <li>Used SQL and Timelion to manipulate data form queries found on ElasticSearch, coming from sources such as Jira, Jenkins, sonarqube</li>
                 <li>Collected & displayed that data on Kibana Canvases using CSS as well</li>
                 <li>Created multiple KPIs displayed internally on client's office's screens</li>
-                <li>Optimized the "time to fix a broken build" python script deployed on Jenkins, collected the Data and displayed it for account executives</li>
-                <li>Wrote an excel parser in Java that parses the responses to a Tembosocial survey and pushes the Data to elastic. Automated the entire process using Maven & jenkins</li>
+                <li>Optimized data collection, manipulation and display processes using an array of technologies (python, Java, jenkins, Kibana, elasticsearch)</li>
               </ul>
               <br>
               <li>Industry Project</li>
@@ -168,7 +167,7 @@
           <h3>McGill University</h3>
           <p>Bachelor in Engineering, Software engineering</p>
           <p id="job-address">845 Sherbrooke Street West, Montreal, QC</p>
-          <p id="job-dates">September 2015-Present</p>
+          <p id="job-dates">September 2015-May 2020</p>
         </div>
       </section>      
   </main>
