--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <!-- //Intro -->
   <header id = "about">
     <nav class="display">
-    <a href="#about">About</a>
-    <a href="#skills">Technical Skills</a>
+    	<a href="#about">About</a>
+    	<a href="#skills">Technical Skills</a>
         <a href="#work">Work Experience</a>
+        <a href="#projects">Projects</a>
         <a href="#education">Education</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -86,7 +87,7 @@
         <div class="col-narrow">
           <h3>Backend Developer - Embedded Systems</h3>
           <p class="uppercase">Sensequake Inc</p>
-          <p id = "job-address">1250 Guy St, Montreal QC, suite 600</p>
+          <p id = "job-address">1250 Guy St, Montreal, QC, suite 600</p>
           <p id ="job-dates">January 2019-May 2019</p>
         </div>
 
@@ -122,10 +123,12 @@
               </ul>
             </ul>
           </div>
+
+          <!-- job 2--> 
           <div class="col-narrow">
             <h3>Junior Associate Software Development Intern</h3>
             <p class="uppercase">Publicis Sapient</p>
-            <p id = "job-address">134 Peter Street, Toronto ON</p>
+            <p id = "job-address">134 Peter Street, Toronto, ON</p>
             <p id ="job-dates">June 2019-August 2019</p>
           </div>
           <div class="col-wide job-description">
@@ -141,15 +144,61 @@
                 <li>Optimized data collection, manipulation and display processes using an array of technologies (python, Java, jenkins, Kibana, elasticsearch)</li>
               </ul>
               <br>
-              <li>Industry Project</li>
-              <ul>
-                <li>Field was Consumer Products</li>
-                <li>Used React to build the website</li>
-                <li>Website used to match industry specialists looking to leverage social media in order to fuel their marketing campaign with social media promoters</li>
-              </ul>
             </ul>
           </div>
         </div>
+      </section>
+      <!-- Projects -->
+      <section id ="projects" class="projects">
+      	<div class="content-wrap">
+      		<h2>Projects</h2>
+      		<!-- Project 1-->
+      		<div class="col-narrow">
+      			<h3>Capture The Flag</h3>
+      			<p class="uppercase">McGill University</p>
+      			<p id = "job-address">Montreal, QC</p>
+      		</div>
+      		<div class="col-wide job-description">
+      			<ul>
+      				<li>In a team of 6, designed robot hardware & software using Lejos EV3 & Java</li>
+      				<li>Iterated hardware & software design based on test data & updated final requirements</li>
+      				<li>Finished 5th in the final capture the flag competition between different teams’ robots</li>
+      			</ul>
+      		</div>
+      		<!-- Project 2-->
+      		<div class="col-narrow">
+          		<h3>Publicis Sapient Industry Challenge</h3>
+          		<p class="uppercase">Publicis Sapient</p>
+          		<p id = "job-address">Toronto, ON</p>
+        	</div>
+        	<div class="col-wide job-description">
+        		<ul>
+                	<li>Field was Consumer Products</li>
+                	<li>Used React to build the front-end, and python for the back-end</li>
+                	<li>Website used to match industry specialists looking to leverage social media in order to fuel their marketing campaign with social media promoters</li>
+                </ul>
+        	</div>
+        	<!-- Porject 3 -->
+        	<div class="col-narrow">
+          		<h3>Machine Learning</h3>
+          		<p class="uppercase">McGill University</p>
+          		<p id = "job-address">Montreal, QC</p>
+        	</div>
+        	<div class="col-wide job-description">
+        		<ul>
+                	<li>In a team of 3, implemented a naïve Bayes machine learning model</li>
+                	<li>Implemented to support Gaussian, Bernoulli and multinomial likelihood</li>
+                	<li>Tested on four datasets: adult salaries, breast cancer, hepatitis and ionosphere color</li>
+                	<li>Accuracy rates:</li>
+                	<ul>
+                		<li>Adult Salaries: 83%</li>
+                		<li>Breast cancer: 83%</li>
+                		<li>Hepatitis: 87%</li>
+                		<li>Ionosphere color: 80%</li>
+                	</ul>
+                </ul>
+        	</div>
+      	</div>
       </section>
 
       <!-- //Education -->
