--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <main>
     <!-- Technical Skills-->
+    <div class="flex-container">
     <section id="skills" class="skills">
       <div class="content-wrap">
         <h2>Technical Skills</h2>
@@ -92,7 +93,7 @@
         </div>
 
         <div class="col-wide job-description">
-          <p>Worked on the company's sensor backend code as well as the IoT device ("gateway") that collects all the data from the sensors</p>
+          <p>Worked on the company's sensor backend code as well as the IoT device ("gateway") that collects all the data from the sensors.</p>
           <p>Key contributions:</p>
           <ul>
             <li>Wireless Project</li>
@@ -218,7 +219,8 @@
           <p id="job-address">845 Sherbrooke Street West, Montreal, QC</p>
           <p id="job-dates">September 2015-May 2020</p>
         </div>
-      </section>      
+      </section>
+      </div>      
   </main>
   <!-- // Footer & contact info -->
   <footer id="contact">
