--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="resources/images/pfp.png" height="auto" width="200" alt="profile-img">
       <h2>Hello,</h2>
-      <p>I am a Fullstack Developer, with a larger focus on Backend and Database development. I pride myself on continuously learning and improving & diversifying my skillset.</p>
+      <p>I am a Fullstack Developer, with a larger focus on Backend and Database development. I pride myself on continuously learning, improving & diversifying my skillset.</p>
     </div>
     <hr>
     <div class="skills">
@@ -60,7 +60,7 @@
       <div class="education-row">
         <img class="cimf-img" src="resources/images/cimf.png" alt="cimf-img">
         <h3>College International Marie de France</h3>
-        <p>I attended middle and high school at College International Marie de France in Montreal, Quebec. I grauted in 2015 and obtained a French Baccalaureate in Science with a "Mention Bien"</p>
+        <p>I attended middle and high school at College International Marie de France in Montreal, Quebec. I grauted in 2015 and obtained a French Baccalaureate in Science with a "Mention Bien".</p>
       </div>
     </div>
     <hr>
