--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="profile">
       <img src="resources/images/pfp.png" height="auto" width="200" alt="profile-img">
       <h2>Hello,</h2>
-      <p>I am a Fullstack Developer, with a larger focus on Backend and Database development. I pride myself on continuously learning, improving & diversifying my skillset.</p>
+      <p>I am a Fullstack Developer, with a larger focus on Backend and Database development. I pride myself on
+        continuously learning, improving & diversifying my skill-set.</p>
     </div>
     <hr>
     <div class="skills">
@@ -33,7 +34,7 @@
         <img class="backend-img" src="resources/images/backend.png" alt="backend-img">
         <h3>Backend Development</h3>
         <p>I have worked on many different Backend projects in many different languages, including
-          Java, Python and C. I have a wealth of experience operating in a linux enviornment,
+          Java, Python and C. I have a wealth of experience operating in a linux environment,
           as well as a solid automation background.</p>
       </div>
       <div class="skill-row">
@@ -45,8 +46,8 @@
       <div class="skill-row">
         <img class="frontend-img" src="resources/images/frontend.png" alt="frontend-img">
         <h3>Frontend Development</h3>
-        <p>My Frontend Development skillset is a work in progress. It currently includes solid foundations
-        in Web Development and iOS Development.</p>
+        <p>My Frontend Development skill-set is a constant work in progress. It currently includes solid foundations
+          in Web Development and iOS Development.</p>
       </div>
     </div>
     <hr>
@@ -55,12 +56,14 @@
       <div class="education-row">
         <img class="mcgill-img" src="resources/images/mcgill.png" alt="mcgill-img">
         <h3>McGill University</h3>
-        <p>I did my undergraduate studies at McGill university in Montreal, Quebec. I graduated in 2020 and obtained a Bachelor's degree in Software Engineering.</p>
+        <p>I did my undergraduate studies at McGill university in Montreal, Quebec. I graduated in 2020 and obtained a
+          Bachelor's degree in Software Engineering.</p>
       </div>
       <div class="education-row">
         <img class="cimf-img" src="resources/images/cimf.png" alt="cimf-img">
         <h3>College International Marie de France</h3>
-        <p>I attended middle and high school at College International Marie de France in Montreal, Quebec. I grauted in 2015 and obtained a French Baccalaureate in Science with a "Mention Bien".</p>
+        <p>I attended middle and high school at College International Marie de France in Montreal, Quebec. I grauted in
+          2015 and obtained a French Baccalaureate in Science with a "Mention Bien".</p>
       </div>
     </div>
     <hr>
@@ -69,22 +72,25 @@
       <div class="work-row">
         <img class="sapient-img" src="resources/images/sapient.png" alt="sapient-img">
         <h3>Publicis Sapient</h3>
-        <p>I have been a Junior Associate Software Developer at Publicis Sapient since October 2020.
-          The onboarding process took place during the Covid-19 pandemic, which introduced many new interesting challenges.</p>
+        <p>I have been an Associate Software Developer at Publicis Sapient since October 2020.
+          The onboarding process took place during the Covid-19 pandemic, which introduced many new interesting
+          challenges.</p>
       </div>
       <div class="work-row">
         <img class="sensequake-img" src="resources/images/sensequake.png" alt="sensequake-img">
         <h3>Sensequake</h3>
         <p>I spent four months starting in January 2019 interning at Sensequake. Being the only backend Developer
-        at a small startup was a very unique experience. Pushing code that went directly to our testing customers was a unique challenge for a younger me.</p>
+          at a small startup was a very unique experience. Pushing code that went directly to our testing customers was
+          a unique first time real-world experience.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <p>If you want to talk code, discuss a project or just tell me why you think the Toronto Raptors are the best team in the NBA,
+      <p>If you want to talk code, discuss a project or just tell me why you think the Toronto Raptors are the best team
+        in the NBA,
         use any of the links below!</p>
-      <a class="btn" href="mailto:toni.khouri1197@hotmail.ca">CONTACT ME</a>
+      <a class="btn" href="mailto:antoine.khouri@outlook.com">CONTACT ME</a>
       <a class="btn" href="Antoine_Khouri_Resume.pdf" target=_blank download>Download PDF</a>
     </div>
   </div>
